# seg-dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/reference/: mockup.html
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 324116cbf0dd_initial_schema_users_talents_talent_.py  a1c2e3f4b5d6_add_won_time_to_deal.py  a7f3c1b2d4e5_report_metadata_multitalent.py  afc2f8425aa0_add_reports_table.py  b2d3f4a5c6e7_merge_don_silverio_wicho.py  (+10 more)
app/: config.py  database.py  main.py  models.py
docs/: HALLAZGOS.md  MANUAL_TECNICO.docx  MANUAL_TECNICO.md
frontend/: index.html  login.html
scripts/: clasificacion_talentos.py  diagnostico_data_quality.py
tests/: conftest.py  test_agent.py  test_audit.py  test_audit_trello_action.py  test_auth.py  test_backfill_script.py  test_config_autocreate.py  test_dashboard.py  test_database.py  test_funnel.py  test_health.py  test_health_checks.py  test_insights.py  test_kpis.py  test_leads.py  test_periods.py  test_pipedrive_integration.py  test_report_build.py  test_report_charts.py  test_report_golden.py  test_report_render.py  test_reports.py  test_security.py  test_sync.py  test_talent_report.py  test_talents.py  test_trello.py  test_trello_autocreate.py  test_trello_autocreate_flow.py  test_trello_service_desc.py  test_write_surface.py
(+173 files in other folders)
