[project]
name = "seg-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.79,<1.0",
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.136.3",
    "google-auth>=2.40,<3.0",
    "gspread>=6.1,<7.0",
    "httpx>=0.28.1",
    "jinja2>=3.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.50",
    "weasyprint>=66,<70",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]
